--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "crud-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.13.1"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
