--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4",
     "yap": "^0.0.2",
     "yup": "^0.32.11"
